--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: 胡雷的博客
-subtitle: 以匠心致初心
+subtitle: 凡心所向 素履所往 生如逆旅 一苇以航
 description: 胡雷的个人博客是一个关注个人博客建设，WEB前端技术，开源云计算等技术信息博客，提供博主在学习成果和工作中经验总结，是一个互联网从业者值得收藏的网站。
 author: hu lei
 language: zh-cn
