--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: 胡雷的博客
-subtitle: 凡心所向 素履所往 生如逆旅 一苇以航
+subtitle: HULEI BLOG
 description: 胡雷的个人博客是一个关注个人博客建设，WEB前端技术，开源云计算等技术信息博客，提供博主在学习成果和工作中经验总结，是一个互联网从业者值得收藏的网站。
 author: hu lei
 language: zh-cn
@@ -72,7 +72,8 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: next
+# theme: next
+theme: hexo-theme-skapp
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
@@ -80,3 +81,114 @@ deploy:
   type: git
   repo: git@github.com:DaGeger/DaGeger.github.io.git
   branch: master
+
+# Sass
+node_sass:
+  outputStyle: nested
+  precision: 5
+  sourceComments: false
+
+# Autoprefixer
+autoprefixer:
+  exclude:
+    - '*.min.css'
+  browsers:
+    - 'last 2 versions'
+
+# Lunr
+lunr:
+  field: all
+  fulltext: false
+  path: assets/lunr/
+
+# filter_cleanup
+hfc_useref:
+  enable: true
+  concat: true
+
+hfc_html:
+  enable: true
+  exclude:
+
+hfc_css:
+  enable: true
+  exclude: 
+    - '*.min.css'
+
+hfc_js:
+  enable: true
+  mangle: true
+  exclude: 
+    - '*.min.js'
+
+hfc_img:
+  enable: false
+  interlaced: false
+  multipass: false
+  optimizationLevel: 2
+  pngquant: false
+  progressive: false
+
+hfc_favicons:
+  enable: false
+  src: img/blog-logo.png
+  target: img/
+  icons:
+    android: true
+    appleIcon: true
+    appleStartup: false
+    coast: false
+    favicons: true
+    firefox: false
+    opengraph: false
+    windows: true
+    yandex: false
+
+menu:
+  home: / 
+  archive: /archives
+  about: /about
+
+# Site
+
+
+# introduction  in the banner header
+subtitle_desc: 凡心所向 素履所往 生如逆旅 一苇以航
+
+# seo keyword
+# keywords: 
+
+# blog description（for seo）
+#description: 日常学习与兴趣交流的个人博客
+
+# self introduction
+introduction: 不思量，自难忘！
+
+# your blog favicon icon, support two ways: local and online. the local way need you to put the icon under  themes/hexo-theme-skapp/source/img directory
+favicon_ico: http://oo12ugek5.bkt.clouddn.com/blog/images/favicon.ico
+
+# blog logo icon in the upper left corner. support the local way and online way. 
+logo: /img/logo.png
+
+# avatar
+avatar: /img/qrcode.jpg
+# qrcode: http://oo12ugek5.bkt.clouddn.com/images/qrcode.png
+
+# page default cover
+# default_cover: http://oo12ugek5.bkt.clouddn.com/images/default_cover.png
+default_cover: /img/cover.png
+
+# header background picture
+header_cover: /img/banner.jpeg
+
+# 404 page background picture
+error_page_bg: http://oo12ugek5.bkt.clouddn.com/blog/images/dogs.jpg
+
+# page loading icon
+loader_img: /img/loader.gif
+
+# footer information
+about:
+  info: 本站是基于 Hexo 搭建的静态资源博客，主要用于分享日常学习、生活及工作的一些心得总结，欢迎点击右下角订阅 rss。
+  address: China
+  email: dageger@163.com
