--- a/package.json
+++ b/package.json
@@ -6,15 +6,28 @@
     "version": "3.3.8"
   },
   "dependencies": {
+    "autoprefixer": "^8.6.2",
+    "gulp-hexo": "^0.0.1",
     "hexo": "^3.2.0",
+    "hexo-autoprefixer": "^1.0.0",
     "hexo-deployer-git": "^0.3.1",
+    "hexo-filter-cleanup": "^1.1.0",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
+    "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.0",
+    "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.3.0",
     "hexo-renderer-marked": "^0.3.0",
+    "hexo-renderer-sass": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
+    "hexo-renderer-swig": "^1.1.0",
+    "hexo-server": "^0.2.0",
+    "lunr": "mamboer/lunr.js",
+    "moment": "^2.22.2",
+    "node-sass": "^4.9.0",
+    "object-assign": "^4.1.1",
+    "useref": "^1.4.1"
   }
 }
